[package]
name = "aeswasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
serde-wasm-bindgen = { git = "https://github.com/cloudflare/serde-wasm-bindgen" }
aes = "0.7.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3.56", features = ['console'] }
salsa20 = "0.9.0"
js-sys = "0.3.56"
console_error_panic_hook = "0.1.7"